--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,6 @@
 {
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
-  "О сайте": "О сайте",
-  "Главная страница": "Главная страница"
+  "Главная страница": "Главная страница",
+  "Язык": "ру"
 }
