--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
-  "Язык": "ру"
+  "Язык": "ру",
+  "Страница не найдена": "Страница не найдена"
 }
