--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,11 @@
   "Тестовый пример": "Тестовый пример",
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
+  "О странице": "О странице",
   "Язык": "ру",
-  "Страница не найдена": "Страница не найдена"
+  "Страница не найдена": "Страница не найдена",
+  "Произошла ошибка...": "Произошла ошибка...",
+  "Обновить страницу": "Обновить страницу",
+  "выбросить ошибку": "выбросить ошибку",
+  "переключить": "переключить"
 }
