--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,10 +3,11 @@
   "Перевод": "Translate",
   "Главная страница": "Main page",
   "О странице": "About page",
-  "Язык": "en",
+  "Язык": "English",
   "Страница не найдена": "Page not found",
   "Произошла ошибка...": "Something went wrong",
   "Обновить страницу": "Reload page",
   "выбросить ошибку": "throw error",
-  "переключить": "toggle"
+  "переключить": "toggle",
+  "Короткий язык": "En"
 }
