--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,10 +3,11 @@
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
   "О странице": "О странице",
-  "Язык": "ру",
+  "Язык": "Русский",
   "Страница не найдена": "Страница не найдена",
   "Произошла ошибка...": "Произошла ошибка...",
   "Обновить страницу": "Обновить страницу",
   "выбросить ошибку": "выбросить ошибку",
-  "переключить": "переключить"
+  "переключить": "переключить",
+  "Короткий язык": "Ру"
 }
